syntax = "proto3";

package orders;

option go_package = "internal/gen/orders;orders";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service OrdersService {
  rpc AcceptOrder (AcceptOrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/accept"
      body: "*"
    };
  }

  rpc ReturnOrder (OrderIdRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders/return"
      body: "*"
    };
  }

  rpc ProcessOrders (ProcessOrdersRequest) returns (ProcessResult) {
    option (google.api.http) = {
      post: "/v1/orders/process"
      body: "*"
    };
  }

  rpc ListOrders (ListOrdersRequest) returns (OrdersList) {
    option (google.api.http) = {
      post: "/v1/orders/list_orders"
      body: "*"
    };
  }

  rpc ListReturns (ListReturnsRequest) returns (ReturnsList) {
    option (google.api.http) = {
      post: "/v1/orders/list_returns"
      body: "*"
    };
  }

  rpc GetHistory (GetHistoryRequest) returns (OrderHistoryList) {
    option (google.api.http) = {
      get: "/v1/orders/history"
    };
  }

  rpc ImportOrders (ImportOrdersRequest) returns (ImportResult) {
    option (google.api.http) = {
      post: "/v1/orders/import"
      body: "*"
    };
  }
}

message AcceptOrderRequest {
  uint64 order_id = 1 [(validate.rules).uint64.gt = 0];
  uint64 user_id = 2 [(validate.rules).uint64.gt = 0];
  google.protobuf.Timestamp expires_at = 3 [(validate.rules).timestamp.required = true];
  optional PackageType package = 4 [
    (validate.rules).enum = {
      defined_only: true,
      not_in: [0]
    }
  ];
  float weight = 5 [(validate.rules).float.gt = 0];
  float price = 6 [(validate.rules).float.gt = 0];
}

message OrderIdRequest {
  uint64 order_id = 1 [(validate.rules).uint64.gt = 0];
}

message ProcessOrdersRequest {
  uint64 user_id = 1 [(validate.rules).uint64.gt = 0];
  ActionType action = 2 [
    (validate.rules).enum = {
      defined_only: true,
      not_in: [0]
    }
  ];
  repeated uint64 order_ids = 3 [(validate.rules).repeated.min_items = 1];
}


enum ActionType {
  ACTION_TYPE_UNSPECIFIED = 0;
  ACTION_TYPE_ISSUE = 1;
  ACTION_TYPE_RETURN = 2;
}

message ListOrdersRequest {
  uint64 user_id = 1 [(validate.rules).uint64.gt = 0];
  bool in_pvz = 2;
  optional uint32 last_n = 3 [(validate.rules).uint32.gte = 1];
  optional Pagination pagination = 4;
}

message Pagination {
  uint32 page = 1 [(validate.rules).uint32.gte = 1];
  uint32 count_on_page = 2 [(validate.rules).uint32.gte = 1];
}

message ListReturnsRequest {
  optional Pagination pagination = 1;
}

message ImportOrdersRequest {
  repeated AcceptOrderRequest orders = 1 [(validate.rules).repeated.min_items = 1];
}

message GetHistoryRequest {
}

message OrderResponse {
  OrderStatus status = 1;
  uint64 order_id = 2;
}

message ProcessResult {
  repeated uint64 processed = 1;
  repeated FailedBatchedOrder errors = 2;
}

message OrdersList {
  repeated Order orders = 1;
  int32 total = 2;
}

message ReturnsList {
  repeated Order returns = 1;
}

message OrderHistoryList {
  repeated OrderHistory history = 1;
}

message ImportResult {
  int32 imported = 1;
  repeated FailedBatchedOrder errors = 2;
}

message FailedBatchedOrder {
  uint64 order_id = 1;
  string code = 2;
  string reason = 3;
}

message Order {
  uint64 order_id = 1;
  uint64 user_id = 2;
  OrderStatus status = 3;
  google.protobuf.Timestamp expires_at = 4;
  float weight = 5;
  float total_price = 6;
  optional PackageType package = 7;
}

enum PackageType {
  PACKAGE_TYPE_UNSPECIFIED = 0;
  PACKAGE_TYPE_BAG = 1;
  PACKAGE_TYPE_BOX = 2;
  PACKAGE_TYPE_TAPE = 3;
  PACKAGE_TYPE_BAG_TAPE = 4;
  PACKAGE_TYPE_BOX_TAPE = 5;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_ACCEPTED = 1;
  ORDER_STATUS_RETURNED_BY_CLIENT = 2;
  ORDER_STATUS_ISSUED = 3;
  ORDER_STATUS_RETURNED_TO_WAREHOUSE = 4;
}

enum EventType {
  EVENT_UNSPECIFIED = 0;
  EVENT_ACCEPTED = 1;
  EVENT_ISSUED = 2;
  EVENT_RETURNED_FROM_CLIENT = 3;
  EVENT_RETURNED_TO_WAREHOUSE = 4;
}

message OrderHistory {
  uint64 order_id = 1;
  EventType event_type = 2;
  google.protobuf.Timestamp created_at = 3;
}

